--- a/teste.html
+++ b/teste.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
-        <title>Cursos da Alura DevOps</title>
+        <title>Cursos da </title>
     </head>
     <body>
         <ul>
