--- a/teste.html
+++ b/teste.html
@@ -5,12 +5,19 @@
         <title>Cursos da Alura</title>
     </head>
     <body>
-        <ul>
-            <li>Abcdefg</li>
-            <li>Docker</li>
-            <li>Ansible</li>
-            <li>Integração Continua</li>
-        </ul>
+        <style>
+            p{
+                width: 80px;
+                height: 80px;
+                background-color: white;
+                position: relative;
+                border-radius: 50%;
+                left: 50%;
+                top: 240px;
+                box-shadow: 20px 15px #000000;
+            }
+        </style>
+        <p></p>
     </body>
 
 </html>
